--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -77,7 +77,7 @@
     <div class="d-flex flex-wrap text-dark justify-content-around pb-4">
         <ng-container *ngIf="loading; else skeletonTemplate">
             <div class="card real-card mb-5 text-white bg-dark border-white rounded-0 border-right-0 border-left-0"
-                *ngFor="let pub of blogPublications">
+                *ngFor="let pub of blogPublications.slice(0, 6)">
                 <div class="card-body">
                     <h3 class="card-title mb-2">{{ pub.title }}</h3>
                     <div class="card-text about-text" [innerHTML]=pub.description></div>
@@ -97,10 +97,9 @@
                     </div>
 
                 </div>
-        </ng-container>
-        <div *ngIf="blogPublications.length === 0" class="text-center text-white mt-5">
-            <h3>No blog publications matched your search criteria.</h3>
-        </div>
+            </div>
+            <div *ngIf="blogPublications.length === 0" class="text-center text-white mt-5">
+                <h3>No blog publications matched your search criteria.</h3>
             </div>
         </ng-container>
 
@@ -187,6 +186,9 @@
 
                 </div>
             </div>
+            <div *ngIf="sciPublications.length === 0" class="text-center text-white mt-5">
+                <h3>No scientific publications matched your search criteria.</h3>
+            </div>
         </ng-container>
 
         <ng-template #skeletonTemplate>
@@ -224,15 +226,6 @@
                                 'animation-duration': '1.2s'
                               }"></ngx-skeleton-loader>
                             </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </ng-container>
-        <div *ngIf="sciPublications.length === 0" class="text-center text-white mt-5">
-            <h3>No scientific publications matched your search criteria.</h3>
-        </div>
                             <div class="col">
                                 <p class="card-text text-end">
                                     <ngx-skeleton-loader count="1" [theme]="{
