feat: add styles and descriptions

--- a/src/app/secondary-components/publications/publications.component.css
+++ b/src/app/secondary-components/publications/publications.component.css
@@ -3,6 +3,14 @@ h2 {
     font-family: 'Anton', 'Poppins', sans-serif;
 }
 
+.new-info-alert {
+    background-color: #9AB9BC;
+    height: 3rem;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+}
+
 .card {
     width: 25rem;
     height: 20rem;
