feat: add loader to new tip

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -64,6 +64,15 @@
                 'border': '1px solid #323232',
                 'animation-duration': '1.2s'
               }"></ngx-skeleton-loader>
+                <br>
+                <ngx-skeleton-loader count="1" [theme]="{
+                'border-radius': '5px',
+                'height': '3rem',
+                'width': '60rem',
+                'background-color': '#323232',
+                'border': '1px solid #323232',
+                'animation-duration': '1.2s'
+                }"></ngx-skeleton-loader>
                 <div class="row" style="font-size: 2rem;">
                     <ngx-skeleton-loader count="4" [theme]="{
                     'border-radius': '5px',
