refactor: improving skeleton responsivity

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -52,23 +52,25 @@
             'background-color': '#323232',
             'border': '1px solid #323232',
             'animation-duration': '1.2s'
-          }">
+            }">
             </ngx-skeleton-loader>
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mt-3 ps-5 px-sm-5 px-md-5 about-text">
                 <ngx-skeleton-loader count="3" [theme]="{
                 'border-radius': '5px',
-                'width': '30rem',
+                'width': '100%',
+                'max-width': '30rem',
                 'background-color': '#323232',
                 'border': '1px solid #323232',
                 'animation-duration': '1.2s'
-              }"></ngx-skeleton-loader>
+                }"></ngx-skeleton-loader>
                 <br>
                 <ngx-skeleton-loader count="1" [theme]="{
                 'border-radius': '5px',
                 'height': '3rem',
-                'width': '60rem',
+                'width': '100%',
+                'max-width': '60rem',
                 'background-color': '#323232',
                 'border': '1px solid #323232',
                 'animation-duration': '1.2s'
@@ -82,10 +84,9 @@
                     'border': '1px solid #323232',
                     'margin-left': '0.5rem',
                     'animation-duration': '1.2s'
-                  }"></ngx-skeleton-loader>
+                    }"></ngx-skeleton-loader>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -130,46 +131,37 @@
                     <div class="card-body">
                         <div class="card-title">
                             <ngx-skeleton-loader count="1" [theme]="{
-                        'border-radius': '5px',
-                        'width': '13rem',
-                        'height': '3rem',
-                        'background-color': '#323232',
-                        'border': '1px solid #323232',
-                        'animation-duration': '1.2s'
-                      }"></ngx-skeleton-loader>
+                                'border-radius': '5px',
+                                'width': '100%',
+                                'max-width': '13rem',
+                                'height': '3rem',
+                                'background-color': '#323232',
+                                'border': '1px solid #323232',
+                                'animation-duration': '1.2s'
+                            }"></ngx-skeleton-loader>
                         </div>
                         <div class="card-text">
                             <ngx-skeleton-loader count="3" [theme]="{
-                            'margin-left': '1rem',
-                            'border-radius': '5px',
-                            'width': '21.5rem',
-                            'background-color': '#323232',
-                            'border': '1px solid #323232',
-                            'animation-duration': '1.2s'
-                          }"></ngx-skeleton-loader>
+                                'margin-left': '1rem',
+                                'border-radius': '5px',
+                                'width': '100%',
+                                'max-width': '21.5rem',
+                                'background-color': '#323232',
+                                'border': '1px solid #323232',
+                                'animation-duration': '1.2s'
+                            }"></ngx-skeleton-loader>
                         </div>
                         <div class="row w-100 foot-card">
                             <div class="col">
                                 <ngx-skeleton-loader count="1" [theme]="{
-                                'margin-left': '1rem',
-                                'border-radius': '5px',
-                                'width': '5rem',
-                                'background-color': '#323232',
-                                'border': '1px solid #323232',
-                                'animation-duration': '1.2s'
-                              }"></ngx-skeleton-loader>
-                            </div>
-                            <div class="col">
-                                <p class="card-text text-end">
-                                    <ngx-skeleton-loader count="1" [theme]="{
                                     'margin-left': '1rem',
                                     'border-radius': '5px',
-                                    'width': '3rem',
+                                    'width': '100%',
+                                    'max-width': '5rem',
                                     'background-color': '#323232',
                                     'border': '1px solid #323232',
                                     'animation-duration': '1.2s'
-                                  }"></ngx-skeleton-loader>
-                                </p>
+                                }"></ngx-skeleton-loader>
                             </div>
                         </div>
                     </div>
@@ -221,46 +213,37 @@
                     <div class="card-body">
                         <div class="card-title">
                             <ngx-skeleton-loader count="1" [theme]="{
-                        'border-radius': '5px',
-                        'width': '13rem',
-                        'height': '3rem',
-                        'background-color': '#323232',
-                        'border': '1px solid #323232',
-                        'animation-duration': '1.2s'
-                      }"></ngx-skeleton-loader>
+                                'border-radius': '5px',
+                                'width': '100%',
+                                'max-width': '13rem',
+                                'height': '3rem',
+                                'background-color': '#323232',
+                                'border': '1px solid #323232',
+                                'animation-duration': '1.2s'
+                            }"></ngx-skeleton-loader>
                         </div>
                         <div class="card-text">
                             <ngx-skeleton-loader count="3" [theme]="{
-                            'margin-left': '1rem',
-                            'border-radius': '5px',
-                            'width': '21.5rem',
-                            'background-color': '#323232',
-                            'border': '1px solid #323232',
-                            'animation-duration': '1.2s'
-                          }"></ngx-skeleton-loader>
+                                'margin-left': '1rem',
+                                'border-radius': '5px',
+                                'width': '100%',
+                                'max-width': '21.5rem',
+                                'background-color': '#323232',
+                                'border': '1px solid #323232',
+                                'animation-duration': '1.2s'
+                            }"></ngx-skeleton-loader>
                         </div>
                         <div class="row w-100 foot-card">
                             <div class="col">
                                 <ngx-skeleton-loader count="1" [theme]="{
-                                'margin-left': '1rem',
-                                'border-radius': '5px',
-                                'width': '5rem',
-                                'background-color': '#323232',
-                                'border': '1px solid #323232',
-                                'animation-duration': '1.2s'
-                              }"></ngx-skeleton-loader>
-                            </div>
-                            <div class="col">
-                                <p class="card-text text-end">
-                                    <ngx-skeleton-loader count="1" [theme]="{
                                     'margin-left': '1rem',
                                     'border-radius': '5px',
-                                    'width': '3rem',
+                                    'width': '100%',
+                                    'max-width': '5rem',
                                     'background-color': '#323232',
                                     'border': '1px solid #323232',
                                     'animation-duration': '1.2s'
-                                  }"></ngx-skeleton-loader>
-                                </p>
+                                }"></ngx-skeleton-loader>
                             </div>
                         </div>
                     </div>
