--- a/src/app/secondary-components/cookie-consent/cookie-consent.component.html
+++ b/src/app/secondary-components/cookie-consent/cookie-consent.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="showConsentMessage" class="cookie-consent-container">
-    <p>We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. More information can be found in our privacy policy.</p>
+    <p>We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. More
+        information can be found in our privacy policy.</p>
     <div class="cookie-buttons">
         <button (click)="acceptConsent()">Accept</button>
         <button (click)="declineConsent()">Decline</button>
