refactor: color theme

--- a/src/app/secondary-components/publications/publications.component.css
+++ b/src/app/secondary-components/publications/publications.component.css
@@ -10,7 +10,7 @@ a.disabled {
 }
 
 .new-info-alert {
-    background-color: #9AB9BC;
+    background-color: #C3CAD2;
     min-height: 3rem;
     vertical-align: middle;
     display: flex;
