--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,5 @@
 <!-- portfolio.component.html -->
+<app-navbar></app-navbar>
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-3">
