--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -8,13 +8,31 @@
       <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
     </div>
     <h3 translate>hobbies.books.read</h3>
-    <ul>
-      <li *ngFor="let book of booksRead">{{ book }}</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-4" *ngFor="let book of booksRead">
+        <div class="card">
+          <img src="path/to/book-cover.jpg" class="card-img-top" alt="Book Cover">
+          <div class="card-body">
+            <h5 class="card-title">{{ book.title }}</h5>
+            <p class="card-text">{{ book.author }}</p>
+            <p class="card-text">{{ book.description }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <h3 translate>hobbies.books.reading</h3>
-    <ul>
-      <li *ngFor="let book of booksReading">{{ book }}</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-4" *ngFor="let book of booksReading">
+        <div class="card">
+          <img src="path/to/book-cover.jpg" class="card-img-top" alt="Book Cover">
+          <div class="card-body">
+            <h5 class="card-title">{{ book.title }}</h5>
+            <p class="card-text">{{ book.author }}</p>
+            <p class="card-text">{{ book.description }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="sports" class="mt-4">
@@ -32,8 +50,16 @@
 
   <section id="setup" class="mt-4">
     <h2 translate>hobbies.setup.title</h2>
-    <ul>
-      <li *ngFor="let item of setupItems">{{ item }}</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-4" *ngFor="let item of setupItems">
+        <div class="card">
+          <img src="path/to/item-image.jpg" class="card-img-top" alt="Item Image">
+          <div class="card-body">
+            <h5 class="card-title">{{ item.title }}</h5>
+            <p class="card-text">{{ item.description }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </div>
