--- a/src/app/hobbies/hobbies.component.css
+++ b/src/app/hobbies/hobbies.component.css
@@ -64,3 +64,66 @@ li {
   width: 100%;
   height: 300px;
 }
+
+.loading-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%; /* Position the tooltip above the text */
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+}
+
+.search-setup {
+  margin-bottom: 1rem;
+}
+
+.filter-sports {
+  margin-bottom: 1rem;
+}
+
+.add-item-form {
+  margin-top: 2rem;
+}
+
+.chart-graph {
+  width: 100%;
+  height: 300px;
+}
