fix: update home component title for improved SEO relevance

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <app-navbar></app-navbar>
         <!-- Main content -->
         <div class="d-flex justify-content-center mt-5">
-            <h1 id="title_name">Lucas Brito - AI, Machine Learning, Data</h1> <!-- Descriptive heading with keywords -->
+            <h1 id="title_name">Lucas Brito</h1> <!-- Descriptive heading with keywords -->
         </div>
         <div class="d-flex justify-content-center">
             <h2 translate id="sub_title">home.sub_title</h2> <!-- Descriptive heading -->
