--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -10,6 +10,10 @@
     </div>
 
     <div class="row justify-content-center mt-3">
+        <p>Below is the detailed information regarding our privacy practices:</p>
+    </div>
+
+    <div class="row justify-content-center mt-3">
         <h5 translate>privacy_policy.information_collection</h5>
         <p translate>privacy_policy.information_collection_text</p>
     </div>
