--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="row justify-content-center mt-3">
-        <p>Below is the detailed information regarding our privacy practices:</p>
+        <p translate>privacy_policy.additional_text</p>
     </div>
 
     <div class="row justify-content-center mt-3">
